# talos_robot

talos_bringup/: CHANGELOG.rst  package.xml
talos_bringup/config/: approach_planner_full.yaml  (+1 more)
talos_controller_configuration/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
talos_description/config/: gazebo_controller_manager_cfg.yaml  rviz.rviz
talos_description/gazebo/: gazebo.urdf.xacro
talos_description/launch/: robot_state_publisher.launch.py  show.launch.py
talos_description/robots/: talos_arm_right.urdf.xacro  talos_full_fake_grippers.urdf.xacro  talos_full_no_grippers.urdf.xacro  talos_lower_body.urdf.xacro  talos_lower_body_torso_head.urdf.xacro
talos_description/ros2_control/: ros2_control.urdf.xacro
talos_description/urdf/: capsule_collision.xacro  talos_full_common.urdf.xacro
talos_description/urdf/arm/: arm.ros2_control.xacro  arm.urdf.xacro  wrist.ros2_control.xacro  wrist.urdf.xacro
talos_description/urdf/gripper/: gripper.ros2_control.xacro  gripper.urdf.xacro
talos_description/urdf/head/: head.ros2_control.xacro  head.urdf.xacro
talos_description/urdf/leg/: leg.ros2_control.xacro  leg.urdf.xacro
talos_description/urdf/sensors/: ftsensor.gazebo.xacro  ftsensor.ros2_control.xacro  imusensor.ros2_control.xacro
talos_description/urdf/torso/: torso.ros2_control.xacro  torso.transmission.xacro  torso.urdf.xacro
talos_description_calibration/: CHANGELOG.rst  package.xml
talos_description_inertial/: CHANGELOG.rst  package.xml
talos_robot/: CHANGELOG.rst  package.xml
(+42 files in other folders)
